--- a/index.html
+++ b/index.html
@@ -616,17 +616,21 @@
                         </div>
                     </form>
 
-                    <form method="post" action="assets/php/php-example.php">
+                    <form id="wdh_form" method="post" action="assets/php/php-example.php">
                         <div>
-                          <label for="say">What greeting do you want to say?</label>
-                          <input name="say" id="say" value="Hi">
+                          <label for="email">What greeting do you want to say?</label>
+                          <input name="email" id="say" placeholder="email">
                         </div>
                         <div>
-                          <label for="to">Who do you want to say it to?</label>
-                          <input name="to" value="Mom">
+                          <label for="text">Who do you want to say it to?</label>
+                          <input name="name" placeholder="text">
                         </div>
                         <div>
-                          <button>Send my greetings</button>
+                            <label for="phone">phone?</label>
+                            <input name="phone" placeholder="phone">
+                          </div>
+                        <div>
+                          <button type="submit">Send my greetings</button>
                         </div>
                     </form>
                 </div>
@@ -677,7 +681,19 @@
         <!--==================== SWIPER JS ====================-->
         <script src="assets/js/swiper-bundle.min.js"></script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
+        <script>
+            $("#wdh_form").submit(function(e){
+                e.preventDefault();
+                $.ajax({
+                    type: "POST",
+                    url: "php-example.php",
+                    data: $("#wdh_form").serialize(),
+                    
+                });
+            });
+        </script>
     </body>
 </html>
