--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         </div>
                     </form>
 
-                    <form id="wdh_form" method="post" action="assets/php/php-example.php">
+                    <form method="post" action="assets/php/mail.php">
                         <div>
                           <label for="email">What greeting do you want to say?</label>
                           <input name="email" id="say" placeholder="email">
