--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         </div>
                     </form>
 
-                    <form method="post" action="assets/php/mail.php">
+                    <form method="POST" action="assets/php/mail.php">
                         <div>
                           <label for="email">What greeting do you want to say?</label>
                           <input name="email" id="say" placeholder="email">
@@ -680,7 +680,7 @@
 
         <!--==================== SWIPER JS ====================-->
         <script src="assets/js/swiper-bundle.min.js"></script>
-        
+
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
     </body>
