--- a/index.html
+++ b/index.html
@@ -616,18 +616,18 @@
                         </div>
                     </form>
 
-                    <form method="POST" action="assets/php/mail.php">
+                    <form method="POST" action="mail.php">
                         <div>
                           <label for="email">What greeting do you want to say?</label>
-                          <input name="email" id="say" placeholder="email">
+                          <input type="text" name="email" id="say" placeholder="email">
                         </div>
                         <div>
                           <label for="text">Who do you want to say it to?</label>
-                          <input name="name" placeholder="text">
+                          <input type="text" name="name" placeholder="text">
                         </div>
                         <div>
                             <label for="phone">phone?</label>
-                            <input name="phone" placeholder="phone">
+                            <input type="text" name="phone" placeholder="phone">
                           </div>
                         <div>
                           <button type="submit">Send my greetings</button>
