--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		}
 	</style>
 
-	<form action="//formspree.io/ohzkys@mailto.plus">
+	<form action="//formspree.io/ohzkys@mailto.plus" method="post">
 		<div class="hpot">
 			<label>Leave this field empty: <input name="_gotcha"></label>
 		</div>
