--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 		}
 	</style>
 
-	<form action="//formspree.io/ohzkys@mailto.plus" method="post">
-		<div class="hpot">
-			<label>Leave this field empty: <input name="_gotcha"></label>
-		</div>
-
-		<input type="text" name="Name" placeholder="You name..." required><br>
-		<input type="text" name="E-mail" placeholder="You E-mail..." required><br>
-		<input type="text" name="Phone" placeholder="You phone..."><br>
+	<form
+		action="https://formspree.io/f/mrgdnvvv"
+		method="POST"
+		>
+		<label>
+		Your email:
+		<input type="email" name="email">
+		</label>
+		<label>
+		Your message:
+		<textarea name="message"></textarea>
+		</label>
+		<!-- your other form fields go here -->
 		<button type="submit">Send</button>
-
 	</form>
 
 </body>
